--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ ul{list-style-type:none}
 .pulse{position:fixed;z-index:1234;width:60px;height:60px;background-color:#58ea00;color:#fff;border-radius:50%;line-height:60px;font-size:30px;display:block;transform:rotateY(180deg);visibility:hidden;bottom:25px;right:50px}
 .pulse:before{content:"";display:block;position:absolute;border:1px solid #58ea00;left:-20px;right:-20px;bottom:-20px;top:-20px;border-radius:50%;animation:animate 1s linear infinite}
 @keyframes animate{0%{transform:scale(.5);opacity:0}50%{opacity:1}100%{transform:scale(1.2);opacity:0}}
+.progress-bar {
+	background-color: #26cc63;
+}
 @media screen and (max-width:1024px){
 	.education-inner{margin-left:0;margin-right:0}
 	.pulse{visibility:visible}}
