--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ info-box__name .hello{
 	height:200px;
 	overflow:hidden}
 .product__thumb img{
-	transition:5s;
+	transition:7s
 }
 .product__text{
 	padding-left:15px;
