--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ ul{list-style-type:none}
 @keyframes leftToRight{from{right:-50%}to{right:0}}
 .info-box__name{padding-top:40px}
 .info-box__name strong{font-weight:500}
-.info-box__name .hello{position:absolute;display:inline-block;top:10px;left:0;padding:5px 10px;color:#fff;font-weight:600;font-size:14px}.info-box__name span:first-child{font-weight:300}.infor-table td{padding:5px 10px}
+.info-box__name .hello{position:absolute;display:inline-block;top:10px;left:0;padding:5px 10px;color:#fff;font-weight:600;font-size:14px;}.info-box__name span:first-child{font-weight:300}.infor-table td{padding:5px 10px}
 .infor-table span{text-transform:uppercase;font-weight:600}
 .education-detail,.product,.skill-inner{background-color:#fff}
 .about-social a:hover i{transform:scale(1.3)}
@@ -41,7 +41,7 @@ ul{list-style-type:none}
 .skill-inner>div{width:50%;padding-left:15px;padding-right:15px}
 .education-inner{display:flex;flex-wrap:wrap;margin-left:-25px;margin-right:-25px}
 .education-col{width:50%;padding-right:25px;padding-left:25px}
-.education-detail{margin-bottom:20px;border-top:5px solid #26cc63;padding:20px 20px 30px 15px;position:relative}
+.education-detail{margin-bottom:20px;border-top:5px solid #26cc63;padding:20px 20px 30px 15px;position:relative;min-height: 161px;}
 .education-detail:after{position:absolute;width:0;height:0;right:-10px;top:18px;border-top:17px solid transparent;border-bottom:17px solid transparent;border-left:17px solid #fff}
 .education-detail.education-detail--modify:after{right:unset;left:-10px;transform:rotateY(180deg)}
 .education__title{font-size:20px;font-weight:500}
